--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 
 <style>
 #chartdiv {
-  width: 50%;
+  width: 33%;
   height: 300px;
 }
 
@@ -196,7 +196,7 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 
-chart.legend = new am4charts.Legend();
+series.labels.template.fontSize = 8;
 
 }); // end am4core.ready()
 </script>
