--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ series.alignLabels = false;
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
-
 series.labels.template.fontSize = 10;
+series.labels.template.wrap = true;
 
 }); // end am4core.ready()
 </script>
