--- a/index.html
+++ b/index.html
@@ -166,16 +166,20 @@ chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
 chart.data = [
   {
-    country: "Lithuania",
-    value: 401
+    country: "NQPV",
+    value: 183
   },
   {
-    country: "Czech Republic",
-    value: 300
+    country: "QVA",
+    value: 329
   },
   {
-    country: "Ireland",
-    value: 200
+    country: "AQV",
+    value: 5
+  },
+  {
+    country: "Autres",
+    value: 385
   }
 ];
 chart.radius = am4core.percent(70);
@@ -195,8 +199,8 @@ series.alignLabels = false;
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
-series.labels.template.fontSize = 10;
-series.labels.template.maxWidth = 80;
+series.labels.template.fontSize = 11;
+series.labels.template.maxWidth = 50;
 series.labels.template.wrap = true;
 
 }); // end am4core.ready()
