--- a/index.html
+++ b/index.html
@@ -606,6 +606,9 @@ series.colors.list = [
     new am4core.color('purple'),
     new am4core.color('blue')
 ]
+series.getIndex(0).labels.each(function(label) {
+  label.fill =  new am4core.color('purple');
+});
 
 }); // end am4core.ready()
 
