--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ series.colors.list = [
     new am4core.color('purple'),
     new am4core.color('blue')
 ]
-series.getIndex(0).labels.each(function(label) {
+chart.series.getIndex(0).labels.each(function(label) {
   label.fill =  new am4core.color('purple');
 });
 
