--- a/index.html
+++ b/index.html
@@ -606,9 +606,8 @@ series.colors.list = [
     new am4core.color('purple'),
     new am4core.color('blue')
 ]
-chart.series.getIndex(0).labels.each(function(label) {
-  label.fill =  new am4core.color('purple');
-});
+chart.series.getIndex(0).labels.template.applyOnClones = true;
+chart.series.getIndex(0).labels.template.fill = new am4core.color('blue');
 
 }); // end am4core.ready()
 
