--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ series.colors.list = [
     new am4core.color('blue')
 ]
 chart.series.getIndex(0).labels.template.applyOnClones = true;
-chart.series.getIndex(0).labels.template.fill = new am4core.color('blue');
+chart.series.getIndex(0).labels.getIndex(0).template.fill = new am4core.color('blue');
 
 }); // end am4core.ready()
 
