--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ series.colors.list = [
     new am4core.color('purple'),
     new am4core.color('blue')
 ]
-chart.series.getIndex(0).labels.template.applyOnClones = true;
+// chart.series.getIndex(0).labels.template.applyOnClones = true;
 chart.series.getIndex(0).labels.getIndex(0).fill = new am4core.color('blue');
 
 }); // end am4core.ready()
