--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ am4core.useTheme(am4themes_animated);
 
 var chart = am4core.create("chartdiv", am4charts.PieChart);
 chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
-chart.labelColorField: "labelColor",
+chart.labelColorField: "labelColor" ;
 
 chart.data = [
   {
