--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ En attente des résultats...
 }
 </style>
 <div id="graphes">
-<span id="graphe_qpv"></span>
+<div id="graphe_qpv"></div>
 <span id="graphe_trajet"></span>
 <span id="graphe_influence"></span>
 </div>
