--- a/index.html
+++ b/index.html
@@ -162,16 +162,18 @@ En attente des résultats...
 
 <!-- on génère les graphiques en synthèse-->
 <style>
-.graphes {display: inline;}
 #graphe_qpv {
+  display: inline-block;
   width: 33%;
   height: 200px;
 }
 #graphe_trajet {
+  display: inline-block;
   width: 34%;
   height: 200px;
 }
 #graphe_influence {
+  display: inline-block;  
   width: 33%;
   height: 200px;
 }
