--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ chart.data = [
   {
     type_quartier: "QVA",
     value: adresses_QVA.features.length,
-    labelColor: new am4core.color('yellow')
+    labelColor: new am4core.color('#fefe33')
   },
   {
     type_quartier: "AQV",
@@ -615,7 +615,7 @@ series.labels.template.maxWidth = 50;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('black'),
-    new am4core.color('yellow'),
+    new am4core.color('#fefe33'),
     new am4core.color('purple'),
     new am4core.color('blue')
 ];
@@ -775,7 +775,7 @@ chart.data = [
   {
     zone: "entre 10 et 15 min",
     value: PS[2].length,
-    labelColor: new am4core.color('yellow')
+    labelColor: new am4core.color('#fefe33')
   },
   {
     zone: "entre 15 et 30 min",
@@ -811,7 +811,7 @@ series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue'),
     new am4core.color('green'),
-    new am4core.color('yellow'),
+    new am4core.color('#fefe33'),
     new am4core.color('orange'),
     new am4core.color('red')
 ];
