--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ chart.data = [
   {
     type_quartier: "QVA",
     value: adresses_QVA.features.length,
-    labelColor: new am4core.color('#ffff66')
+    labelColor: new am4core.color('#fada5e')
   },
   {
     type_quartier: "AQV",
@@ -594,7 +594,7 @@ chart.data = [
   }
 ];
 chart.radius = am4core.percent(50);
-chart.innerRadius = am4core.percent(40);
+chart.innerRadius = am4core.percent(35);
 chart.startAngle = 180;
 chart.endAngle = 360;  
 
@@ -611,11 +611,11 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 series.labels.template.fontSize = 11;
-series.labels.template.maxWidth = 50;
+series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('black'),
-    new am4core.color('#ffff66'),
+    new am4core.color('#fada5e'),
     new am4core.color('purple'),
     new am4core.color('blue')
 ];
@@ -776,7 +776,7 @@ chart.data = [
   {
     zone: "entre 10 et 15 min",
     value: PS[2].length,
-    labelColor: new am4core.color('#ffff66')
+    labelColor: new am4core.color('#fada5e')
   },
   {
     zone: "entre 15 et 30 min",
@@ -790,7 +790,7 @@ chart.data = [
   }
 ];
 chart.radius = am4core.percent(50);
-chart.innerRadius = am4core.percent(30);
+chart.innerRadius = am4core.percent(35);
 chart.startAngle = 180;
 chart.endAngle = 360;  
 
@@ -807,12 +807,12 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 series.labels.template.fontSize = 11;
-series.labels.template.maxWidth = 50;
+series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue'),
     new am4core.color('green'),
-    new am4core.color('#ffff66'),
+    new am4core.color('#fada5e'),
     new am4core.color('orange'),
     new am4core.color('red')
 ];
@@ -1055,7 +1055,7 @@ chart.data = [
   }
 ];
 chart.radius = am4core.percent(50);
-chart.innerRadius = am4core.percent(40);
+chart.innerRadius = am4core.percent(35);
 chart.startAngle = 180;
 chart.endAngle = 360;  
 
@@ -1072,7 +1072,7 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 series.labels.template.fontSize = 11;
-series.labels.template.maxWidth = 50;
+series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue'),
