--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@ En attente des résultats...
   height: 300px;
 }
 </style>
+
+<div>
+Vous pouvez survoler les secteurs des graphiques pour visualiser le nombre d'adresses recensées
+</div>
 		
 <div class="graphes" id="graphe_qpv"></div>
 <div class="graphes" id="graphe_trajet"></div>
@@ -579,7 +583,7 @@ chart.data = [
   {
     type_quartier: "QVA",
     value: adresses_QVA.features.length,
-    labelColor: new am4core.color('#fada5e')
+    labelColor: new am4core.color('#ffd700')
   },
   {
     type_quartier: "AQV",
@@ -615,7 +619,7 @@ series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('black'),
-    new am4core.color('#fada5e'),
+    new am4core.color('#ffd700'),
     new am4core.color('purple'),
     new am4core.color('blue')
 ];
@@ -776,7 +780,7 @@ chart.data = [
   {
     zone: "entre 10 et 15 min",
     value: PS[2].length,
-    labelColor: new am4core.color('#fada5e')
+    labelColor: new am4core.color('#ffd700')
   },
   {
     zone: "entre 15 et 30 min",
@@ -812,7 +816,7 @@ series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue'),
     new am4core.color('green'),
-    new am4core.color('#fada5e'),
+    new am4core.color('#ffd700'),
     new am4core.color('orange'),
     new am4core.color('red')
 ];
