--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="//cdn.amcharts.com/lib/4/core.js"></script>
     <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-easyprint@2.1.9/dist/bundle.min.js"></script>
 
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
@@ -442,7 +443,12 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
  function exemple1() {
     var map_1 = L.map('map_1').setView([48.864891,2.389828], 14);
   	 
-
+    L.easyPrint({
+	title: 'Imprimer',
+	position: 'topleft',
+	sizeModes: ['A4Portrait', 'A4Landscape']
+	}).addTo(map_1);
+	 
     tableau_sortie.map( adresse => {
     let properties = {
    "lng": adresse.lng,
