--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
+	exportOnly: 'true',
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_1);
 	 
@@ -663,6 +664,7 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
+	exportOnly: 'true',
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_2);
 	 
@@ -873,6 +875,7 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
+	exportOnly: 'true',
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_3);
   
