--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: 'true',
+	exportOnly: true,
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_1);
 	 
@@ -664,7 +664,7 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: 'true',
+	exportOnly: true,
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_2);
 	 
@@ -875,7 +875,7 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: 'true',
+	exportOnly: true,
 	sizeModes: ['A4Portrait', 'A4Landscape']
 	}).addTo(map_3);
   
