--- a/index.html
+++ b/index.html
@@ -446,8 +446,10 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: true,
-	sizeModes: ['A4Portrait', 'A4Landscape']
+	sizeModes: ['Current', 'A4Landscape', 'A4Portrait'],
+      	filename: 'myMap',
+      	exportOnly: true,
+      	hideControlContainer: true
 	}).addTo(map_1);
 	 
     tableau_sortie.map( adresse => {
@@ -664,8 +666,10 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: true,
-	sizeModes: ['A4Portrait', 'A4Landscape']
+	sizeModes: ['Current', 'A4Landscape', 'A4Portrait'],
+      	filename: 'myMap',
+      	exportOnly: true,
+      	hideControlContainer: true
 	}).addTo(map_2);
 	 
     var bornes = [0,5,10,15,30,10000];
@@ -875,8 +879,10 @@ chart.exporting.menu.verticalAlign = "top";
     L.easyPrint({
 	title: 'Imprimer',
 	position: 'topleft',
-	exportOnly: true,
-	sizeModes: ['A4Portrait', 'A4Landscape']
+	sizeModes: ['Current', 'A4Landscape', 'A4Portrait'],
+      	filename: 'myMap',
+      	exportOnly: true,
+      	hideControlContainer: true
 	}).addTo(map_3);
   
     tableau_sortie.map( adresse => {
