--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ var checkbox = document.createElement('input');
 checkbox.type = "checkbox"; 
 checkbox.id = "type_act_"+ (index+1) ;
 var label = document.createElement('label'); 
-label.htmlFor = "type_act_"+ (index+1) ; 
+label.htmlFor = " " + "type_act_"+ (index+1) ; 
 label.appendChild(document.createTextNode(element)); 
 document.getElementsByClassName('radio_1')[0].appendChild(checkbox); 
 document.getElementsByClassName('radio_1')[0].appendChild(label); 
