--- a/index.html
+++ b/index.html
@@ -962,12 +962,12 @@ ZI_20C.addTo(Layer_ZI_20C);
 }
 
 
-#map_3..leaflet-tooltip-left.myCSSClass::before {
+#map_3.leaflet-tooltip-left.myCSSClass::before {
   border-left-color: cyan;
 }
 
 
-#map_3..leaflet-tooltip-right.myCSSClass::before {
+#map_3.leaflet-tooltip-right.myCSSClass::before {
   border-right-color: cyan;
 }
 	 
