--- a/index.html
+++ b/index.html
@@ -956,18 +956,18 @@ ZI_20C.addTo(Layer_ZI_20C);
 	}
     });
 
-#map_3.myCSSClass {
+map_3.myCSSClass {
   background: green;
   border: 2px solid cyan
 }
 
 
-#map_3.leaflet-tooltip-left.myCSSClass::before {
+map_3.leaflet-tooltip-left.myCSSClass::before {
   border-left-color: cyan;
 }
 
 
-#map_3.leaflet-tooltip-right.myCSSClass::before {
+map_3.leaflet-tooltip-right.myCSSClass::before {
   border-right-color: cyan;
 }
 	 
