--- a/index.html
+++ b/index.html
@@ -952,24 +952,9 @@ ZI_20C.addTo(Layer_ZI_20C);
     PS.forEach(
     function(element) {
 	if ( element.nom_centre_social != 'La 20eme Chaise') {
-        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 4, color : 'red'}).bindTooltip(element.nom_centre_social,{className: 'myCSSClass', permanent: false, color : 'red', opacity: 0.7, fillColor : 'red', fillOpacity : 0.3}));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 4, color : 'red'}).bindTooltip(element.nom_centre_social,{permanent: false, color : 'red', opacity: 0.7, fillColor : 'red', fillOpacity : 0.3}));
 	}
     });
-
-map_3.myCSSClass {
-  background: green;
-  border: 2px solid cyan
-}
-
-
-map_3.leaflet-tooltip-left.myCSSClass::before {
-  border-left-color: cyan;
-}
-
-
-map_3.leaflet-tooltip-right.myCSSClass::before {
-  border-right-color: cyan;
-}
 	 
 // on crée le layer des cercles d'influence des autres CS
 layer_adresses_CS.eachLayer(function(layer)
