--- a/index.html
+++ b/index.html
@@ -960,7 +960,9 @@ ZI_20C.addTo(Layer_ZI_20C);
 layer_adresses_CS.eachLayer(function(layer)
 { 
  var Test = LGeo.circle(layer.getLatLng(), radius, opts);
+console.log(Test) ;
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
+console.log(poly) ;
 // on doit gérer le cas où la surface différence est un polygone à trou(s) !!
 // attention également au cas des multipolygones !!
 
