--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ chart.exporting.menu.verticalAlign = "top";
   <div id="map_2" style="width: 100%; height: 560px"></div>
   <script>
  function exemple2() {
-    var map_2 = L.map('map_2').setView([48.864891,2.389828], 14);
+    var map_2 = L.map('map_2',{ scrollWheelZoom: false }).setView([48.864891,2.389828], 14);
   	 
     L.easyPrint({
 	title: 'Imprimer',
@@ -881,7 +881,7 @@ chart.exporting.menu.verticalAlign = "top";
   <div id="map_3" style="width: 100%; height: 560px"></div>
   <script>
  function exemple3() {
-    var map_3 = L.map('map_3').setView([48.864891,2.389828], 14);
+    var map_3 = L.map('map_3',{ scrollWheelZoom: false }).setView([48.864891,2.389828], 14);
   	 
     L.easyPrint({
 	title: 'Imprimer',
