--- a/index.html
+++ b/index.html
@@ -948,6 +948,26 @@ var ZI_20C = unify(Layer_ZI_20C.getLayers(),'blue')
 Layer_ZI_20C.clearLayers();
 ZI_20C.addTo(Layer_ZI_20C);
 
+// on ajoute des éléments CSS pour générer des tooltips sur mesure pour les CS
+
+var TooltipClass = {
+  'className': 'class-tooltip'
+}
+
+<style type="text/css">
+.leaflet-tooltip.class-tooltip {
+  background: green;
+  border: 2px solid cyan
+}
+
+.leaflet-tooltip-left.class-tooltip::before {
+  border-left-color: cyan;
+}
+
+.leaflet-tooltip-right.class-tooltip::before {
+  border-right-color: cyan;
+}
+</style>
 	 
     PS.forEach(
     function(element) {
