--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-easyprint@2.1.9/dist/bundle.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="./stylesheets/tooltip.css">
+	  
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
 
