--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ var TooltipClass = {
     PS.forEach(
     function(element) {
 	if ( element.nom_centre_social != 'La 20eme Chaise') {
-        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 4, color : 'red'}).bindTooltip(element.nom_centre_social,{permanent: false, color : 'red', opacity: 0.7, fillColor : 'red', fillOpacity : 0.3}));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 4, color : 'red'}).bindTooltip(element.nom_centre_social,{'className': 'class-tooltip', permanent: false, color : 'red', opacity: 0.7, fillColor : 'red', fillOpacity : 0.3}));
 	}
     });
 	 
